--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -9,18 +9,18 @@ jobs:
     steps:
       - name: Login to Docker Hub
         uses: docker/login-action@v1
-        with: 
+        with:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Checkout
-        uses: actions/checkout@v2  
+        uses: actions/checkout@v2
 
       - name: Build Docker Image
-        run: docker-compose build
+        run: docker compose build
 
       - name: Test
-        run: docker-compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test"
+        run: docker compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test"
 
       - name: Lint
-        run: docker-compose run --rm app sh -c "flake8"
+        run: docker compose run --rm app sh -c "flake8"
